# Bird-Bot-Lite

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: messages.yaml  settings.example.yaml  settings.yaml
src/birt_bot_lite/: bot.py  config.py  repository.py
src/birt_bot_lite/cogs/: __init__.py  check_status_cog.py  room_cog.py  teamup_board_cog.py  teamup_cog.py
src/birt_bot_lite/utils/: __init__.py  channel_checks.py
